# ChillSoftwareRenderer

./: CMakeLists.txt  Camera.cpp  Camera.h  Math.cpp  Math.h  Model.cpp  Model.h  Object.cpp  Object.h  README.md  Render.cpp  Render.h  Scene.cpp  Scene.h  TGAImage.cpp  TGAImage.h  Window.cpp  Window.h  main.cpp
Shader/: GBuffer.cpp  GBuffer.h  IShader.cpp  IShader.h  PBRShader.cpp  PBRShader.h  PCSSShader.cpp  PCSSShader.h  PhongShader.cpp  PhongShader.h  SkyBoxShader.cpp  SkyBoxShader.h
